[package]
name = "nichi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde", "bincode"]

[dependencies]
serde = { version = "1.0.189", features = ["derive"], optional = true }
bincode = { version = "2.0.0-rc.3", features = ["derive"], optional = true }
