[package]
name = "nichi"
version = "0.2.0"
edition = "2021"
authors = ["hinto.janai <hinto.janai@protonmail.com>"]
description = "Date library"
documentation = "https://docs.rs/nichi"
repository = "https://github.com/hinto-janai/nichi"
readme = "README.md"
keywords = ["date", "weekday", "month", "day", "year"]
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[features]
default = ["serde", "bincode"]

[dependencies]
serde = { version = "1.0.189", features = ["derive"], optional = true }
bincode = { version = "2.0.0-rc.3", features = ["derive"], optional = true }
derive_more = "0.99.17"
regex = "1.10.2"
once_cell = "1.18.0"
